logs/Slang/generated/yosys/simple_loops.sv.log
name: simple_loops
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/loops.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/loops.v:31:8: error: language feature not yet supported
always @*
       ^~
